# movie-finder-rag

./: .cursorrules  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Jenkinsfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: implement.md  review-pr.md  session-start.md
.codex/: config.toml
.cursor/rules/: architect.mdc  debugger.mdc  developer.mdc  project.mdc  python.mdc
.devcontainer/: devcontainer.json
.gemini/: settings.json
.gemini/skills/architect/: SKILL.md
.gemini/skills/debugger/: SKILL.md
.gemini/skills/developer/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  linked_task.yml  security.yml  technical_debt.yml
.github/workflows/: ci.yml
.junie/: guidelines.md
ai-context/: README.md  issue-agent-briefing-template.md
ai-context/prompts/: implement.md  review-pr.md
docs/: devops-setup.md
scripts/: backup_vectorstore.py  chunking_experiment.py  evaluate_qdrant_collections.py  generate_cost_report.py  launch_tui.py  retrieve.py  validate_ingestion.py
src/: main.py
src/dataset/: dataset.py
src/embeddings/: base.py  gemini_provider.py  openai_provider.py
src/ingestion/: csv_loader.py  pipeline.py
src/models/: movie.py
src/rag/: config.py  main.py
src/rag/chunking/: __init__.py  base.py  factory.py  field.py  fixed_size.py  flat.py  sentence.py
src/rag/dataset/: dataset.py
src/rag/embeddings/: base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py  sentence_transformers_provider.py
src/rag/ingestion/: csv_loader.py  pipeline.py
src/rag/models/: movie.py
src/rag/tui/: __init__.py  app.py  constants.py  widgets.py
src/rag/utils/: logger.py
src/rag/vectorstore/: base.py  chromadb_vectorstore.py  factory.py  naming.py  pgvector_vectorstore.py  pinecone_vectorstore.py  qdrant_vectorstore.py
src/utils/: logger.py
src/vectorstore/: base.py  chromadb_vectorstore.py  qdrant_vectorstore.py
tests/: conftest.py  test.py  test_backup.py  test_chunking.py  test_config.py  test_dataset.py  test_embeddings.py  test_factory.py  test_ingestion.py  test_logger.py  test_main.py  test_rag.py  test_retrieve.py  test_vectorstore.py
tests/tui/: test_app.py  test_constants.py  test_widgets.py
tui/: __init__.py  app.py  constants.py  widgets.py
