[project]
name = "movie-finder-rag"
version = "0.1.0"
description = "AI/Data ingestion pipeline — embeds Kaggle movie dataset into a Qdrant vector store"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "kagglehub>=1.0.0",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.17.1",
    "tqdm>=4.66.0",
]

[dependency-groups]
lint = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "pre-commit>=4.2.0",
    "detect-secrets>=1.5.0",
]

[tool.uv]
default-groups = []
packages = ["src/rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
