[project]
name = "movie-finder-rag"
version = "0.1.0"
description = "AI/Data ingestion pipeline — embeds the Kaggle movie dataset into the configured vector store"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "chromadb>=1.5.5",
    "google-genai>=1.69.0",
    "kagglehub>=1.0.0",
    "ollama>=0.6.1",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pgvector>=0.4.1",
    "pinecone>=7.0.2",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=5.1.2",
    "torch>=2.8.0",
]
tui = [
    "textual>=0.80.0",
]

[dependency-groups]
lint = ["ruff>=0.15.9", "mypy>=1.20.0"]
test = ["pytest>=8.3.0", "pytest-cov>=6.0.0"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "pre-commit>=4.5.1",
    "detect-secrets>=1.5.0",
    "textual>=0.80.0",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
mypy_path = "src:scripts:."
strict = true
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]


[[tool.mypy.overrides]]
module = ["tui.*"]
warn_unused_ignores = false


[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src"]
relative_files = true
omit = ["tests/*", "scripts/*", "*/tui/*", "*/py.typed"]

[tool.coverage.report]
show_missing = true
fail_under = 100
